@@ -38,7 +38,7 @@ public record CompoundBingoSub(ElementType elementType, Operator operator, List<
     @Override
     public Dynamic<?> substitute(Map<String, Dynamic<?>> referable, RandomSource rand) {
         final var op = elementType.accumulator.apply(operator);
-        Dynamic<?> result = factors.get(0).substitute(referable, rand);
+        Dynamic<?> result = factors.getFirst().substitute(referable, rand);
         for (int i = 1; i < factors.size(); i++) {
             result = op.apply(result, factors.get(i).substitute(referable, rand));
         }
